--- a/index.html
+++ b/index.html
@@ -1,2 +1,4 @@
 <p>#</p>
-<p><a href="https://twitter.com/john_devadoss">https://twitter.com/john_devadoss</a> <br />&nbsp;<br />&nbsp;<br /><a href="https://www.linkedin.com/in/johnkdevadoss%20">https://www.linkedin.com/in/johnkdevadoss</a> <br />&nbsp;<br />&nbsp;<br /><a href="%20https://www.crunchbase.com/person/john-devadoss">https://www.crunchbase.com/person/john-devadoss</a></p>
+<p><a href="https://twitter.com/john_devadoss">https://twitter.com/john_devadoss</a> </p>
+<p><a href="%20https://www.crunchbase.com/person/john-devadoss">https://www.crunchbase.com/person/john-devadoss</a></p>
+<p><a href="https://www.linkedin.com/in/johnkdevados">https://www.linkedin.com/in/johnkdevados</a></p>
