--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+---
+layout: post
+title: Blogging Like a Hacker
+---
+
 <p>#</p>
 <p><a href="https://twitter.com/john_devadoss">https://twitter.com/john_devadoss</a> </p>
 <p><a href="https://www.crunchbase.com/person/john-devadoss">https://www.crunchbase.com/person/john-devadoss</a></p>
