--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 layout: default
 ---
 
-<p><a href="https://twitter.com/john_devadoss">https://twitter.com/john_devadoss</a> </p>
-<p><a href="https://www.linkedin.com/in/johnkdevadoss">https://www.linkedin.com/in/johnkdevadoss</a></p>
+
+<img src="Matrix.jpg" alt="... the Red Pill ..." width="500" height="500"> 
